Adjusted the styling of the footer to prevent text overflow on the x-axis.

--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ html {
   width: 100%;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .hidden {
   display: none;
 }
@@ -16,6 +20,5 @@ html {
 
 #copyright-group {
   position: relative;
-  width: 100vw;
   background-color: gold;
 }
